@@ -1,3 +1,11 @@
+2005-04-28 Jens A. Tkotz <jens@peino.de>  1.5.1-cvs-b15
+
+	Fix: More spelling and validation fixes by Gaile in base.css
+
+	Fix: Initialtab was not correct set in edit_apperance
+
+	Fix: When editing properties via startpage the properties page broke after 2 apply.
+
 2005-04-27 Pierre-Luc Paour <paour@users.sourceforge.net>  1.5.1-cvs-b14
 
 	* Fix: htmlMimeMail.php was checked in with the wrong line endings
